--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,4 @@
-site_name: "Looker Studio Workshop Guide"
+site_name: "การสร้างรายงานด้วย Looker Studio"
 site_description: "คู่มือเชิงปฏิบัติการสร้าง Dashboard โดยใช้ Looker Studio"
 site_url: "https://weeix.github.io/looker-studio-manual"
 repo_url: "https://github.com/weeix/looker-studio-manual"
@@ -24,16 +24,25 @@ markdown_extensions:
   - attr_list
   - def_list
   - md_in_html
+  - pymdownx.details
+  - pymdownx.superfences
   - toc:
       permalink: true
 plugins:
   - search
   - to-pdf:
-      cover_subtitle: "คู่มือเชิงปฏิบัติการสร้าง Dashboard โดยใช้ Looker Studio"
+      cover_subtitle: "คู่มือประกอบการฝึกปฏิบัติ"
       author: "วีร์ ศรีทิพโพธิ์"
       copyright: "© 2568 กองการอนุญาต กรมป่าไม้"
       toc_title: "สารบัญ"
       output_path: "pdf/looker-studio-workshop.pdf"
       download_link: header
+      # debug_html: true
 nav:
   - บทนำ: index.md
+  - Workshop 1: workshop-1.md
+  - Workshop 2: workshop-2.md
+  - Workshop 3: workshop-3.md
+  - Workshop 4: workshop-4.md
+  - Workshop 5: workshop-5.md
+  - Workshop 6: workshop-6.md
