--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -44,4 +44,4 @@ nav:
   - Workshop 2: workshop-2.md
   - Workshop 3: workshop-3.md
   - Workshop 4: workshop-4.md
-  - Workshop 5: workshop-5.md
+  - Workshop เสริมที่ 1: workshop-supplement-1.md
