--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -45,3 +45,4 @@ nav:
   - Workshop 3: workshop-3.md
   - Workshop 4: workshop-4.md
   - Workshop เสริมที่ 1: workshop-supplement-1.md
+  - Workshop เสริมที่ 2: workshop-supplement-2.md
