add supplement workshop 3

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -46,3 +46,4 @@ nav:
   - Workshop 4: workshop-4.md
   - Workshop เสริมที่ 1: workshop-supplement-1.md
   - Workshop เสริมที่ 2: workshop-supplement-2.md
+  - Workshop เสริมที่ 3: workshop-supplement-3.md
