add supplement workshop 4

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -47,3 +47,4 @@ nav:
   - Workshop เสริมที่ 1: workshop-supplement-1.md
   - Workshop เสริมที่ 2: workshop-supplement-2.md
   - Workshop เสริมที่ 3: workshop-supplement-3.md
+  - Workshop เสริมที่ 4: workshop-supplement-4.md
